# tinyprojects

./: README.md  pyproject.toml
tests/: test_tinyprojects.py  test_translator.py
tinyprojects/: currency.py  horoscope.py  plagiarism.py  text2speech.py  translator.py  watermark.py
