[tool.poetry]
name = "tinyprojects"
version = "0.1.0"
description = "Learn python by building tiny projects"
authors = ["Sanjiv Mathur <learnsanjiv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
goslate = "^1.5.4"
translate = "^3.6.1"
textblob = "^0.17.1"
pyaztro = "^0.3"
currency-converter-with-rate = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
